[package]
name = "screwit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
maybe-async = "0.2.6"
roux = "2.2.1"
test-case = "2.2.1"
tokio = { version = "1.21.1", features = ["full"] }
unicode-segmentation = "1.10.0"
